fixed spacing on learned weight on rl page

--- a/app/assets/stylesheets/ranked_list.scss
+++ b/app/assets/stylesheets/ranked_list.scss
@@ -248,7 +248,6 @@
 #rl-page td {
   font-size:16px;
   font-weight:500;
-  padding:5px !important;
   margin-left:5px !important;
 }
 
